tests/expectations/compiler/finalize/set_incorrect_type_fail.out
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:16:36
     |
  16 |         Mapping::set(tokens, addr, amount);
     |                                    ^^^^^^
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:17:26
     |
  17 |         tokens.set(addr, amount);
     |                          ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:18:31
     |
  18 |         Mapping::set(amounts, 1u8, amount);
     |                               ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:19:21
     |
  19 |         amounts.set(1u8, amount);
     |                     ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:20:37
     |
  20 |         Mapping::set(amounts, addr, 1u8);
     |                                     ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:21:27
     |
  21 |         amounts.set(addr, 1u8);
     |                           ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:70
     |
  22 |         Mapping::set(tokens, addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                                      ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:60
     |
  23 |         tokens.set(addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                            ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:24:22
     |
  24 |         Mapping::set(foo, addr, amount);
     |                      ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:25:9
     |
  25 |         foo.set(addr, amount);
     |         ^^^
